--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b5954663fa6255b393bb7382878b79accc51d88f52bbe8ff7be52fe0c0294091"
+  "signature": "sha256:420355240e23d6b4afbc825222252f94a5ef8cfa3faee29610d6e0ecd87ef42d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,7 +33,7 @@
       "that's followed by an empty *code cell* (a light grey rectangle with a label like *\"In[ ]\"*), you should \n",
       "type the expression in the code cell, hit Shift+Return to *execute* it, and note the output.\n",
       "\n",
-      "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
+      "Limit copying and pasting to cells requiring more than 5 lines! You'll learn the concepts better if you type them out yourself.\n",
       "\n",
       "Warning periodically save your work by pressing the save icon above (We'll cover the other icons later but if you want to know what they are now hover your cursor over them)"
      ]
@@ -77,8 +77,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -95,8 +94,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -124,8 +122,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -152,8 +149,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -170,8 +166,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -188,8 +183,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -204,8 +198,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -223,8 +216,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -246,8 +238,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -265,8 +256,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -283,14 +273,14 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "We can apply the same indexing mechanism as we did for 1d array except we use a comma to seperate the indexing that refers to the rows and the indexing that refers to the columns:\n",
+      "    \n",
       "    my_2d_array[1:4:2,0:3:2]"
      ]
     },
@@ -300,8 +290,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -327,8 +316,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -359,8 +347,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -387,8 +374,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -417,8 +403,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -435,8 +420,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -458,8 +442,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -480,8 +463,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -520,8 +502,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -541,8 +522,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -561,8 +541,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -582,8 +561,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -603,8 +581,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -622,8 +599,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -641,8 +617,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -660,8 +635,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -678,8 +652,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -732,8 +705,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -748,8 +720,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -766,8 +737,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -784,8 +754,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -804,8 +773,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -839,8 +807,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -864,8 +831,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -880,8 +846,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -898,8 +863,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -931,8 +895,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -949,8 +912,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -969,8 +931,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -994,8 +955,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1013,8 +973,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1031,8 +990,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1050,8 +1008,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1068,8 +1025,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1091,8 +1047,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1110,8 +1065,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1128,8 +1082,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1146,8 +1099,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1171,8 +1123,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1189,8 +1140,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1215,8 +1165,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1235,8 +1184,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1256,8 +1204,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1277,8 +1224,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1306,8 +1252,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1333,8 +1278,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1351,8 +1295,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1369,8 +1312,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1392,8 +1334,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1421,8 +1362,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1446,8 +1386,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1465,8 +1404,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1487,8 +1425,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1517,8 +1454,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1535,8 +1471,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1555,8 +1490,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1583,8 +1517,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1601,8 +1534,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1642,8 +1574,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1667,8 +1598,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1693,8 +1623,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1712,8 +1641,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1736,8 +1664,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1758,7 +1685,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Calculate and plot the residuals *for the first 11 data points* for both the full fit and the partial fits. Can you send a trend in the residuals for the two fits?"
+      "Calculate and plot the residuals *for the first 11 data points* in the above data set for both the full fit and the partial fits. Can you send a trend in the residuals for the two fits?"
      ]
     },
     {
@@ -1767,26 +1694,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     }
    ],
    "metadata": {}
