--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:420355240e23d6b4afbc825222252f94a5ef8cfa3faee29610d6e0ecd87ef42d"
+  "signature": "sha256:dc27cc48b1875ed83b67cbd4f614a153c702ebb4204aa7e170ee737fd34102f0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -229,6 +229,7 @@
       "If the third index is omitted the step size is 1 i.e we include all elements between the first index and the second index - 1\n",
       "\n",
       "Thus\n",
+      "    \n",
       "    my_array[::]"
      ]
     },
@@ -673,7 +674,9 @@
       "    from IPython.core.pylabtools import figsize, getfigs\n",
       "\n",
       "    from pylab import *\n",
-      "    from numpy import *"
+      "    from numpy import *\n",
+      "    \n",
+      "(no need to enter this as it's already loaded)"
      ]
     },
     {
@@ -779,7 +782,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Take a look at the two files you've produced: [my_data_file.txt](./my_data_file.txt) and [my_data_file2.txt](./my_data_file2.txt)"
+      "Take a look at the two files you've just produced: [my_data_file.txt](./my_data_file.txt) and [my_data_file2.txt](./my_data_file2.txt)"
      ]
     },
     {
@@ -920,9 +923,7 @@
      "source": [
       "This pops up a footer window that has lots of information. It defines all the keywords and explains what form they take and what their effect is. You won't yet be able to understand everything that the helper utility tells you but it can still be a very useful resource. \n",
       "\n",
-      "Another way to get the same information, is to type the function follow by the initial opening parenthesis and then simply pause a moment:\n",
-      "\n",
-      "    hist("
+      "Another way to get the same information, is to type the function name (**hist** in this case) follow by the opening parenthesis **(** and then simply pause a moment, try it in the cell below:"
      ]
     },
     {
@@ -1325,7 +1326,7 @@
       "    c = fitted_params[1]\n",
       "    print('Gradient = ',m)\n",
       "    print('Intercept = ',c)\n",
-      "    print('R^2' = ' ,fitted_params[2])"
+      "    print('R^2 = ' ,fitted_params[2])"
      ]
     },
     {
@@ -1413,7 +1414,7 @@
       "Notice we see no obvious trend. If we did it would be an indicator there our model choice (in this case a straight line) is not capturing all the structure of our data. Let's see what happens if we pick a different dataset and that is not well described using a line.\n",
       "\n",
       "    Y2 = 0.5*X**2 -5*X + 50\n",
-      "    noisey_Y2 = Y + 10 * randn(100)\n",
+      "    noisey_Y2 = Y2 + 10 * randn(100)\n",
       "    plot(X,Y2)\n",
       "    plot(X, noisey_Y2, linestyle='', marker='^')\n",
       "    show()"
@@ -1629,7 +1630,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We see the values we get for the gradient and intercept are different. If we visualize both fits we'll see why. First we'll create the fitted data we're going to plot:\n",
+      "We see the values we get for the gradient and intercept are quite different. If we visualize both fits we'll see why. First we'll create the fitted data we're going to plot:\n",
       "\n",
       "    good_fitted_y = bad_m*x + bad_c\n",
       "    bad_fitted_y = good_m*x + good_c"
