--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -21,21 +21,22 @@
      "source": [
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
-      "Notebook is adapted from material gathered by Andrew McKinley and Oliver Robotham and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "Notebook is adapted from material gathered by Andrew McKinley and Oliver Robotham, as well as Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's load the pylab machinery and get that out of the way."
+      "Let's load the pylab and non-linear fitting machinery and get that out of the way."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%pylab inline"
+      "%pylab inline\n",
+      "import scipy.optimize"
      ],
      "language": "python",
      "metadata": {},
@@ -167,7 +168,7 @@
      "source": [
       "We will now study how the statistical properties vary with the sample size.\n",
       "\n",
-      "* For the first data set (column), overlap the histograms of the full sample (N=100000), selecting only the first 10000 and 1000 measurements. (For this comparison you likelly want to plot the histogram normalized by sample size. Choose the appropriate option of function *hist* to achieve this.) By observing the histograms what can you infer about the variation of the mean value and standard deviation with sample size (for sufficiently big samples)?"
+      "* For the first data set (column), overlap the histograms of the full sample (N=100000), selecting only the first 10000 and 1000 measurements. (For this comparison you likelly want to plot the histogram normalized by sample size. Choose the appropriate option of function *hist* to achieve this.) By first observing the histograms, and then by calculating their value, what can you infer about the variation of the mean value and standard deviation with sample size (for sufficiently big samples)?"
      ]
     },
     {
@@ -180,6 +181,16 @@
       "\n",
       "legend()\n",
       "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "array([mean(data[:1000,0]),mean(data[:25000,0]),mean(data[:50000,0]),mean(data[:75000,0]),mean(data[:,0])])"
      ],
      "language": "python",
      "metadata": {},
@@ -258,7 +269,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As a final note, from the definition of standard error and the study we just carried out, what is the limit of the standard error value as the sample size goes to infinity? Although the statistical error vanishes for infinite sample sizes, this does not mean you can achieve in a limit an absolute confidence in your measurements (imagine you do infinite many length measurements of an object a few milimiter long with a bent ruler!). The standard error does not take into account sistematic errors due to your instrument or faulty operation. Sistematic errors need to be estimated based on the knowledge measurement process and intruments used."
+      "As a final note, from the definition of standard error and the study we just carried out, what is the limit of the standard error value as the sample size goes to infinity? Although the statistical error vanishes for infinite sample sizes, this does not mean you can achieve in a limit an absolute confidence in your measurements (imagine you do infinite many length measurements of an object a few milimiters long with a bent ruler!). The standard error does not take into account sistematic errors due to your instrument or faulty operation. Sistematic errors need to be estimated based on the knowledge of the measurement process and intruments used."
      ]
     },
     {
@@ -267,6 +278,137 @@
      "metadata": {},
      "source": [
       "Exercise 2"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In this exercise we will be studying the kinetics of the decomposition reaction of $N_2 O_5$\n",
+      "\n",
+      "$$2 N_2 O_{5 (g)} \\longrightarrow 4NO_{2 (g)} + O_{2 (g)}$$\n",
+      "\n",
+      "The rate of a chemical reaction is how fast the concentration of one of the reactants or products changes during the chemical reaction. In the case of the reaction under study the rate of the reaction is proportional to the concentration of $N_2 O_5$, it is said to obey a first order rate law\n",
+      "\n",
+      "$$rate=- \\frac{d[N_2 O_5]}{d t} =k [N_2 O_5] ,$$\n",
+      "\n",
+      "where $k$ is the *rate constant*. This is a first order ordinary differential equation in \ufffc$[N_2 O_5]$, and its solution is\n",
+      "\n",
+      "$$[N_2 O_5]=[N_2 O_5]_0 e^{-k t}\ufffc$$\n",
+      "\n",
+      "for an initial concentration $[N_2 O_5]_0$. (You can see a brief [schetch of the solution](https://wiki.ch.ic.ac.uk/wiki/index.php?title=Solving_the_Rate_Equation) of the rate equation.)\n",
+      "\n",
+      "The first objective of the exercise is to determine the value of the rate constant $k$. In order to do this, the concentration of $N_2 O_5$ was recorded as a function of time at $65^{\\circ}C$, and registered in file [N2O5vst_65C.dat](files/N2O5vst_65C.dat), where the first column is time in seconds and the second column is concentration in $\\text{mol.dm}^{-3}$.\n",
+      "\n",
+      "In order to have an estimate of the uncertainty of each reading, a series of measurements were made at the same time of reaction (490s), and are registered in the table bellow. We will consider that the error bars extracted from these readings are representative of the error for readings at all times of reaction.\n",
+      "\n",
+      "<table>\n",
+      "<tr><th>Reading No.</th><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td></tr>\n",
+      "<tr><th>$[N_2 O_5]/(\\text{mol.dm}^{-3})$</th><td>0.00379</td><td>0.00345</td><td>0.00398</td><td>0.00349</td><td>0.00411</td><td>0.00372</td><td>0.00401</td><td>0.00388</td><td>0.00362</td><td>0.00395</td></tr>\n",
+      "</table>\n",
+      "\n",
+      "* Load the values of concentration as a function of time into a variable. From the repeated measuremenst at the same time calculate the size of the error bars to apply to every point. Plot the concentrarion of $N_2 O_5$ as a function ot time with error bars and proper axes labels."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "n2o5=loadtxt('N2O5vst_65C.dat')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "n2o5_err=std(array([0.00379,0.00345,0.00398,0.00349,0.00411,0.00372,0.00401,0.00388,0.00362,0.00395])) #need to check which error is appropriate!\n",
+      "n2o5_err"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#is there a more elegant way of doing this?\n",
+      "errorbar(n2o5[:,0],n2o5[:,1],yerr=array([n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err]),marker='o',linestyle='none')\n",
+      "xlabel('t/s')\n",
+      "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Create an appropriate exponential function that will allow obtaining the value of the rate constant by fitting the experimental data. Fit the data and report the value of the rate constant and the uncertainty associated with it. Superimpose the fit with the experimental data to check your fit is meaningful."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def rate1(t,k,C0):\n",
+      "    \"Exponential function corresponding to an integrated first order rate law.\"\n",
+      "    return C0*e**(-k*t)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "n2o5_fit=scipy.optimize.curve_fit(rate1,n2o5[:,0],n2o5[:,1],p0=[0.000001,0.1])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "n2o5_fit"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t=n2o5[:,0]\n",
+      "k=n2o5_fit[0][0]\n",
+      "C0=n2o5_fit[0][1]\n",
+      "\n",
+      "errorbar(t,n2o5[:,1],yerr=array([n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err,n2o5_err]),marker='o',linestyle='none')\n",
+      "plot(t,rate1(t,k,C0),linestyle='--')\n",
+      "xlabel('t/s')\n",
+      "ylabel('$[N_2 O_5]/mol.dm^{-3}$')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The rate constant of an elementary reaction varies in general with temperature according to Arrhenius equation\n",
+      "\n",
+      "$$k(T)=A e^{-\\frac{E_a}{R T}} ,$$"
      ]
     },
     {
