Carry on work on exercise 2 problem set 1.

--- a/C_Y1/exercises1/exercise1.ipynb
+++ b/C_Y1/exercises1/exercise1.ipynb
@@ -357,7 +357,7 @@
      "collapsed": false,
      "input": [
       "def rate1(t,k,C0):\n",
-      "    \"Exponential function corresponding to an integrated first order rate law.\"\n",
+      "    \"Exponential function consistent with first order rate law.\"\n",
       "    return C0*e**(-k*t)"
      ],
      "language": "python",
@@ -368,7 +368,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "n2o5_fit=scipy.optimize.curve_fit(rate1,n2o5[:,0],n2o5[:,1],p0=[0.000001,0.1])"
+      "n2o5_fit=scipy.optimize.curve_fit(rate1,n2o5[:,0],n2o5[:,1],p0=[0.000001,0.1])\n",
+      "n2o5_fit"
      ],
      "language": "python",
      "metadata": {},
@@ -378,7 +379,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "n2o5_fit"
+      "sqrt(n2o5_fit[1][0,0])"
      ],
      "language": "python",
      "metadata": {},
@@ -406,10 +407,97 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The rate constant of an elementary reaction varies in general with temperature according to Arrhenius equation\n",
+      "Some other colleagues followed the same proceedure as above but at different temperatures. The following table shows values of the rate constant at its uncertainty with respect for different temperatures.\n",
       "\n",
-      "$$k(T)=A e^{-\\frac{E_a}{R T}} ,$$"
+      "<table>\n",
+      "<tr><th>$T/^{\\circ} C$</th><th>$k/s^{-1}$</th><th>$\\sigma_k/s^{-1}$</th><tr>\n",
+      "<tr><td>20</td><td>0.0000188</td><td>0.0000089</td></tr>\n",
+      "<tr><td>30</td><td>0.0000694</td><td>0.0000073</td></tr>\n",
+      "<tr><td>40</td><td>0.000260</td><td>0.0000013</td></tr>\n",
+      "<tr><td>50</td><td>0.000888</td><td>0.000067</td></tr>\n",
+      "<tr><td>60</td><td>0.00293</td><td>0.00021</td></tr>\n",
+      "</table>\n",
+      "\n",
+      "The variation of the rate constant with temperature can give important information about the chemical reaction. The rate constant of an elementary reaction varies in general with temperature according to Arrhenius equation\n",
+      "\n",
+      "$$k(T)=A e^{-\\frac{E_a}{R T}} ,$$\n",
+      "\n",
+      "where $E_a$ is the chemical reaction activation energy, $A$ is the so called pre-exponential factor related to the frequency of molecular collisions, $R$ is the ideal gas constant."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ktemp=array([array([20,30,40,50,60,65])+273.15,array([0.0000188,0.0000694,0.000260,0.000888,0.00293,n2o5_fit[0][0]]),array([0.0000089,0.0000073,0.0000013,0.000067,0.00021,sqrt(n2o5_fit[1][0,0])])])\n",
+      "ktemp"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "errorbar(ktemp[0],ktemp[1],yerr=ktemp[2],marker='o',linestyle='None')\n",
+      "xlabel('T/K')\n",
+      "ylabel('$k/s^{-1}$')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def arrhenius(T,Ea,A):\n",
+      "    \"Exponential function taking parameters of Arrhenius form in SI units.\"\n",
+      "    R=8.3144621\n",
+      "    return A*e**(-Ea/(R*T))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "arr_fit=scipy.optimize.curve_fit(arrhenius,ktemp[0],ktemp[1],sigma=ktemp[2],p0=[8e4,1e10])\n",
+      "arr_fit"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sqrt(diag(arr_fit[1]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "T=linspace(290,340,50)\n",
+      "\n",
+      "errorbar(ktemp[0],ktemp[1],yerr=ktemp[2],marker='o',linestyle='None')\n",
+      "plot(T,arrhenius(T,arr_fit[0][0],arr_fit[0][1]),linestyle='--')\n",
+      "xlabel('T/K')\n",
+      "ylabel('$k/s^{-1}$')\n",
+      "show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
